# ICantSpell

./: .gitignore
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-04-27-0740.md
_bmad-output/implementation-artifacts/: 1-1-tauri-project-scaffold-and-menu-bar-shell.md  1-2-core-error-types-and-stt-trait-interface.md  1-3-configuration-persistence-foundation.md  1-4-three-window-tauri-architecture.md  1-5-ci-pipeline.md  2-1-first-launch-detection-and-onboarding-wizard-shell.md  2-2-accessibility-permission-request.md  2-3-microphone-permission-request.md  2-4-ptt-hotkey-configuration.md  2-5-permission-validation-and-onboarding-completion.md  2-6-permission-revocation-monitoring.md  3-1-global-ptt-hotkey-registration.md  3-2-microphone-audio-capture-pipeline.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-27.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/: index.html  main.js  onboarding.html  onboarding.js  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  error.rs  hotkey.rs  injection.rs  lib.rs  main.rs  models.rs  overlay.rs  permissions.rs
src-tauri/src/stt/: mod.rs  whisper.rs
